--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: I'm DB's Course Project
-subtitle: We are so vegetable!
+title: SkyWalkerX's Space Station
+subtitle:
 use-site-title: true
 css: "/css/index.css"
 bigimg:
